# quickfix-rs

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  cmake_install.cmake  tradeclient.cfg
bridge/: Application.cpp  Tradeclient.cpp
bridge/include/: Application.h
cxx/: Application.cpp  Application.cxx  CMakeLists.txt  ITradeclient.h  Makefile  README.md  TradeClient.cpp  Tradeclient.cpp  application.cpp  cmake_install.cmake  common.h  tradeclient.cpp  wrapper.h
cxx/include/: Application.h  Tradeclient.h  application.h  tradeclient.h
cxx/tradeclient-apifiny/: Application.cpp  Application.h  CMakeLists.txt  Makefile  Tradeclient.cpp  Tradeclient.h  cmake_install.cmake  common.h  fix42.xml  main.cpp  tradeclient.cfg  tradeclient.cpp
cxx/tradeclient-ccapi/: Application.cpp  Application.h  ApplicationCCApi.cpp  ApplicationCCApi.h  CMakeLists.txt  Makefile  Tradeclient.cpp  Tradeclient.h  TradeclientCCApi.cpp  TradeclientCCApi.h  ccapi_wrapper.cpp  ccapi_wrapper.h  cmake_install.cmake  common.h  main.cpp
cxx/tradeclient-wintmute/: Application.cpp  Application.h  CMakeLists.txt  Makefile  cmake_install.cmake  tradeclient.cfg  wm_fix.xml
examples/: apifiny.rs
src/: application.rs  lib.rs  main.rs  trade_client.rs
src/C++/: Allocator.h
