[package]
name = "quickfix-rs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cxx-build = "1.0.69"

[dependencies]
cxx = "1.0.69"

[dev-dependencies]
anyhow = "1.0.58"
chrono = "0.4.19"
jsonwebtoken = "8.1.1"
log = "0.4.17"
once_cell = "1.12.1"
rand = "0.8.5"
serde = "1.0.138"
sha2 = "0.10.2"

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
