[package]
name = "quickfix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8"
cxx = "1"
fefix = { version = "0.7", features = ["fix42"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
cxx-build = "1"
bindgen = "0.60"
